# meal-plan

./: .gitignore  README.md  docker-compose.yml
crawler/: README.md  alembic.ini  pyproject.toml  settings.ini
crawler/alembic/: env.py
crawler/alembic/versions/: 2023_08_25_2106-4e759658f5f0_initial.py  2023_08_25_2205-6ca5404325f5_ingest_scraped_data.py
crawler/crawler/: models.py  queue_processors.py
crawler/lib/: recipes.py
crawler/scripts/: crawl_links_from_backlog.py  never_expire_keys.py  parse_html_from_crawls.py  parse_ingredients.py  write_cleaned_data_to_db.py  write_recipes_to_db.py
docker/grafana/: grafana.env  grafana.ini
docker/influxdb/: config.yml
docker/postgres/migrations/: 0001-create-schema.sql
